# zmq_opencv

./: CMakeLists.txt
src/: client.cpp  server.cpp
